// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile should render the component 1`] = `
<DocumentFragment>
  <div
    class="tile"
  />
</DocumentFragment>
`;

exports[`Tile should render the component styled 1`] = `
<DocumentFragment>
  <div
    class="tile"
    style="background: rgb(51, 51, 51); width: 34px; height: 34px;"
  />
</DocumentFragment>
`;
